--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.0.2",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
+    "test": "react-scripts --openssl-legacy-provider test",
+    "eject": "react-scripts --openssl-legacy-provider eject"
   },
   "eslintConfig": {
     "extends": [
