--- a/package.json
+++ b/package.json
@@ -4,21 +4,20 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.5.0",
-    "@mui/material": "^5.14.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
     "jwt-decode": "^3.1.2",
-    "material-ui-chip-input": "^1.1.0",
     "moment": "^2.29.1",
+    "mui-chips-input": "^2.0.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
